# coach_sportif_ia

./: .dockerignore  .env.example  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
.github/agents/: google-agents-cli-adk-code.agent.md  google-agents-cli-deploy.agent.md  google-agents-cli-eval.agent.md  google-agents-cli-observability.agent.md  google-agents-cli-publish.agent.md  google-agents-cli-scaffold.agent.md  google-agents-cli-workflow.agent.md
docs/: BACKLOG.md  DEPLOY_GCP.md  PRD.md
scripts/: deploy_cloud_run.sh  sync_env_to_secret_manager.sh
src/coach_ai/: __init__.py  config.py  connectors.py  graph.py  llm.py  main.py  models.py  state.py
src/coach_ai/agents/: plan_generator.py  profile_analyzer.py
src/coach_ai/services/: plan_validator.py
src/coach_sportif_ia.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_health.py
